# cargo-nightly-renovate-minimal-reproduction

./: Cargo.toml  README.md
src/bar/: Cargo.toml
src/foo/: Cargo.toml
